--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,16 +2,14 @@
 
 - name: "Override zshrc configuration with template"
   include: override_zshrc.yml
-  when: override_zshrc|bool == true
+  when: override_zshrc
 
 - name: "Fill zshrc configuration file"
   include: fill_zshrc.yml
-  when: override_zshrc|bool == false
-
+  when: not override_zshrc
 - name: "Override aliases file configuration with template"
   include: override_aliases.yml
-  when: override_aliases|bool == true
-
+  when: override_aliases=
 - name: "Fill aliases file configuration"
   include: fill_aliases.yml
-  when: override_aliases|bool == false
+  when: not override_aliases=
