--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,32 +8,32 @@ override_zshrc: false
 
 # zshrc content variables
 zsh_theme: gentoo
-plugins_list:
-  - "  git"
-  - "  zsh-syntax-highlighting"
-  - "  zsh-autosuggestions"
-  - "  colored-man-pages"
-  - "  colorize"
-  - "  command-not-found"
-  - "  copydir"
-  - "  copyfile"
-  - "  cp"
-  - "  vi-mode"
-  - "  gitignore"
-  - "  pip"
-  - "  virtualenv"
-  - "  lol"
-  - "  extract"
-  - "  vundle"
-  - "  history"
+plugins_list: |
+    git
+    zsh-syntax-highlighting
+    zsh-autosuggestions
+    colored-man-pages
+    colorize
+    command-not-found
+    copydir
+    copyfile
+    cp
+    vi-mode
+    gitignore
+    pip
+    virtualenv
+    lol
+    extract
+    vundle
+    history
 
-alias_list:
-  - alias src="source ~/.zshrc"
-  - alias python="python3.7"
-  - alias pip="pip3"
-  - alias zshcfg="vim ~/.zshrc"
-  - alias vimcfg="vim /etc/vim/vimrc"
-  - alias aliases="vim ~/.aliases"
+alias_list: |
+  alias src="source ~/.zshrc"
+  alias python="python3.7"
+  alias pip="pip3"
+  alias zshcfg="vim ~/.zshrc"
+  alias vimcfg="vim ~/.vimrc"
+  alias aliases="vim ~/.aliases"
 
 custom_paths:
   - HOME_BIN=$HOME/bin
